// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing [itemChoser] component should have snapshot structure 1`] = `
<div
  class="item-choser"
>
  
  

</div>
`;

exports[`testing [messagePanel] component should have snapshot structure 1`] = `
<div
  class="message-panel"
  name="message-fade"
>
  <div
    class="message-text"
  >
    
  </div>
</div>
`;
